olympus/open-webui/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui
  namespace: olympus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`chat.ramoneees.com`)
      kind: Rule
      services:
        - name: open-webui
          port: 8080
  tls:
    secretName: wildcard-ramoneees-com-tls
